src/objects/Questioned_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Date_Debt_Notification_Sent_to_Auditee__c</fullName>
        <label>Date Debt Notification Sent to Auditee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Payment_Received_from_Auditee__c</fullName>
        <label>Date Payment Received from Auditee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Findings</label>
        <referenceTo>Findings__c</referenceTo>
        <relationshipLabel>Questioned Costs</relationshipLabel>
        <relationshipName>Questioned_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questioned_Costs__c</fullName>
        <label>Questioned Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Findings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Findings</label>
        <referenceTo>Sub_Findings__c</referenceTo>
        <relationshipLabel>Questioned Costs</relationshipLabel>
        <relationshipName>Questioned_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Allowed_Costs__c</fullName>
        <label>Total Allowed Costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Disallowed_Costs__c</fullName>
        <label>Total Disallowed Costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Questioned_Cost__c</fullName>
        <label>Type of Questioned Cost</label>
        <picklist>
            <controllingField>Questioned_Costs__c</controllingField>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Award</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Questioned Costs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Questioned Costs ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questioned Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_Allowed_Costs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( NOT(ISPICKVAL(Questioned_Costs__c , &apos;Yes&apos;)) ,
(ISPICKVAL(Questioned_Costs__c, &apos;&apos;))), 
NOT(ISBLANK(Total_Allowed_Costs__c )))</errorConditionFormula>
        <errorDisplayField>Total_Allowed_Costs__c</errorDisplayField>
        <errorMessage>Cannot Enter values if Questioned cost is not YES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Disallowed_Costs</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR( NOT(ISPICKVAL(Questioned_Costs__c , &apos;Yes&apos;)) ,
(ISPICKVAL(Questioned_Costs__c, &apos;&apos;))), 
NOT(ISBLANK(Total_Disallowed_Costs__c)))</errorConditionFormula>
        <errorDisplayField>Total_Disallowed_Costs__c</errorDisplayField>
        <errorMessage>Cannot Enter values if Questioned cost is not YES</errorMessage>
    </validationRules>
</CustomObject>